index and contact.html:correction contrast ratio about bc in footer

--- a/style.css
+++ b/style.css
@@ -136,7 +136,7 @@ a:hover {
 .d-bloc h6 a,
 .d-bloc p a {
     /*color: rgba(255, 255, 255, .6);*/
-    color:white;
+    color:black;
     transform: scale(1);
     transition:400ms;
 }
@@ -156,9 +156,9 @@ a:hover {
 .d-bloc h6 a:hover,
 .d-bloc p a:hover {
     /*color: rgba(255, 255, 255, 1);*/
-    transform:scale(1.4);
+    transform:scale(1.5);
     /*color:#95cae3;*/
-    color:#6bb5d7;
+    color:#0a5c83;
 
 }
 
@@ -349,7 +349,7 @@ a:hover {
 }
 
 #bloc-1-hero h1 {
-    font-size: 40px;
+    font-size: 45px;
 }
 
 .navbar {
@@ -738,7 +738,7 @@ input:focus:invalid {
 }
 
 .hero-bloc-text {
-    font-size: 38px;
+    font-size: 45px;
 }
 
 .hero-bloc-text-sub {
@@ -815,7 +815,8 @@ h4 {
 }
 
 .white {
-    color: #FFFFFF!important;
+    /*color: #FFFFFF!important;*/
+    color:black;
 }
 
 .portfolio-thumb {
@@ -840,6 +841,7 @@ h4 {
 }
 .collabandcraft {
     font-size: 1.2em;
+    color: white;
 }
 .collabandcraft-title {
     color:rgba(236,224,191,1);
@@ -927,9 +929,11 @@ h4 {
 }
 .tc-white--sm-12 {
     text-align: center;
+    color:black;
 }
 .tc-white--sm-12-p {
     text-align: center;
+    color:black;
 }
 
 @media (max-width: 1024px) {
